applications/openeuler-quickissue-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-quickissue-website
  name: openeuler-quickissue-website
