applications/openeuler-quickissue-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openeuler-quickissue-website-deployment
  namespace: openeuler-quickissue-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: openeuler-quickissue-website
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: openeuler-quickissue-website
    spec:
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-quickissue:b6e771c5636872c746ea21f84bd54cbd2fa9bc33
        imagePullPolicy: IfNotPresent
        name: openeuler-quickissue-website
        resources:
          limits:
            cpu: 1000m
            memory: 1000Mi
          requests:
            cpu: 500m
            memory: 500Mi
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
