applications/openeuler-quickissue-website/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: openeuler-quickissue-website-ingress
  namespace: openeuler-quickissue-website
spec:
  rules:
  - host: quickissue.openeuler.org
    http:
      paths:
      - backend:
          serviceName: openeuler-quickissue-website-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - quickissue.openeuler.org
    secretName: openeuler-quickissue-website-tls
